--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-  "dev": "node server.js",
+  "dev": "next dev --turbopack",
   "build": "next build",
-  "start": "NODE_ENV=production node server.js"
+  "start": "node server.js"
 },
   "dependencies": {
     "express": "^5.1.0",
